--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,15 @@
     <a href='/'>Home</a>
     <a href='/about/'>About</a>
     <a href='/blog/'>Blog</a>
+    <h1>About me</h1>
+    <p>
+      I am working through Astro's introductory tutorial. This is the second
+      page on my website.
+    </p>
 
-    <h1>My Astro Site</h1>
+    <p>
+      This site will update as I complete more of the tutorial, so keep checking
+      back and see how my journey is going!
+    </p>
   </body>
 </html>
