--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import BaseLayout from './layouts/BaseLayout.astro';
+
 const pageTitle = 'About me';
 
 const identity = {
@@ -20,57 +22,60 @@ const skills = [
 const happy = true;
 const finished = false;
 const goal: number = 1;
+
+const skillColor = 'navy';
+const fontWeight = 'bold';
+const textCase = 'uppercase';
 ---
 
-<html lang='en'>
-  <head>
-    <meta charset='utf-8' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-    <meta name='viewport' content='width=device-width' />
-    <meta name='generator' content={Astro.generator} />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <a href='/'>Home</a>
-    <a href='/about/'>About</a>
-    <a href='/blog/'>Blog</a>
-    <h1>{pageTitle}</h1>
-    <p>
-      I am working through Astro's introductory tutorial. This is the second
-      page on my website.
-    </p>
+<BaseLayout pageTitle={pageTitle}>
+  <p>
+    I am working through Astro's introductory tutorial. This is the second page
+    on my website.
+  </p>
 
-    <p>
-      This site will update as I complete more of the tutorial, so keep checking
-      back and see how my journey is going!
-    </p>
-    <p>Here are a few facts about me:</p>
-    <ul>
-      <li>My name is {identity.firstName}.</li>
-      <li>
-        I live in {identity.country} and I am a {identity.occupation}.
-      </li>
-      {
-        identity.hobbies.length >= 2 && (
-          <li>
-            Two of my hobbies are: {identity.hobbies[0]} and{' '}
-            {identity.hobbies[1]}
-          </li>
-        )
-      }
-    </ul>
-    <p>My skills are:</p>
-    <ul>
-      {skills.map((skill) => <li>{skill}</li>)}
-    </ul>
-    {happy && <p>I am happy to learn Astro</p>}
-    {finished && <p>I finished the Astro tutorial! </p>}
+  <p>
+    This site will update as I complete more of the tutorial, so keep checking
+    back and see how my journey is going!
+  </p>
+  <p>Here are a few facts about me:</p>
+  <ul>
+    <li>My name is {identity.firstName}.</li>
+    <li>
+      I live in {identity.country} and I am a {identity.occupation}.
+    </li>
     {
-      goal === 3 ? (
-        <p>I plan to finish this in 3 day</p>
-      ) : (
-        <p>I am not planing to finish this in 3 days</p>
+      identity.hobbies.length >= 2 && (
+        <li>
+          Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}
+        </li>
       )
     }
-  </body>
-</html>
+  </ul>
+  <p>My skills are:</p>
+  <ul>
+    {skills.map((skill) => <li class='skill'>{skill}</li>)}
+  </ul>
+  {happy && <p>I am happy to learn Astro</p>}
+  {finished && <p>I finished the Astro tutorial! </p>}
+  {
+    goal === 3 ? (
+      <p>I plan to finish this in 3 day</p>
+    ) : (
+      <p>I am not planing to finish this in 3 days</p>
+    )
+  }
+</BaseLayout>
+
+<style is:global define:vars={{ skillColor, fontWeight, textCase }}>
+  h1 {
+    color: purple;
+    font-size: 4rem;
+  }
+
+  .skill {
+    color: var(--skillColor);
+    font-weight: var(--fontWeight);
+    text-transform: var(--textCase);
+  }
+</style>
